--- a/index.html
+++ b/index.html
@@ -9,7 +9,64 @@
   <link rel="stylesheet" href="styles.css">
   <title>Odin Landing Page Project</title>
 </head>
-<body>
-  
+<body class="wrapper">
+  <div class="top-wrapper">
+    <div class="header">
+      <div class="logo">Header Logo</div>
+      <div class="links">
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="hero">
+      <div class="hero-left">
+        <div class="hero-header">This website is awesome</div>
+        <div class="hero-text">This website has some subtext that goes here under main title. It's a smaller font and the color is lower contrast.</div>
+        <div><button>Sign up</button></div>
+      </div>
+      <div class="placeholder">this is a placeholder for an image</div>
+    </div>
+  </div>
+  <p class="content-header">Some random information.</p>
+  <div class="content">
+    <div class="card">
+      <div class="img-holder"></div>
+      <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="card">
+      <div class="img-holder"></div>
+      <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="card">
+      <div class="img-holder"></div>
+      <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="card">
+      <div class="img-holder"></div>
+      <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+  </div>
+  <div class="quote-wrapper">
+    <blockquote>
+      <div class="quote">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.
+        Who knows? All I know is that it looks nice.
+      </div>
+      <footer>-Thor, God of Thunder</footer>
+    </blockquote>
+  </div>
+  <div class="call-to-action">
+    <div class="cta-left">
+      <div class="cta-text-1">Call to action! It's time!</div>
+      <div class="cta-text-2">Sign up for our product by clicking that button right over there!</div>
+    </div>
+    <div><button class="cta-button">Sign up</button></div>
+  </div>
+  <div class="footer">
+    <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
+  </div>
 </body>
 </html>
